crates/inertia-macros/tests/ui/fail/unsupported_enum.stderr
error: Inertia derives support structs with named fields only
 --> tests/ui/fail/unsupported_enum.rs:4:1
  |
4 | #[inertia(component = "Bad")]
  | ^
